--- a/backend/Appkademy/src/main/resources/application.properties
+++ b/backend/Appkademy/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/appkademy?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=YOUR_PASSWORD
+#spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.hibernate.ddl-auto=update
