--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.1",
+    "formik": "^2.4.3",
     "framer-motion": "^10.15.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
