--- a/backend/Appkademy/src/main/resources/application.properties
+++ b/backend/Appkademy/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.datasource.password=YOUR_PASSWORD
 spring.jpa.hibernate.ddl-auto=update
 
 #Swagger
-springdoc.swagger-ui.path=/documentation
+springdoc.swagger-ui.path=documentation
