--- a/backend/Appkademy/src/main/resources/application.properties
+++ b/backend/Appkademy/src/main/resources/application.properties
@@ -2,7 +2,11 @@ spring.datasource.url=jdbc:mysql://localhost:3306/appkademy?useSSL=false&serverT
 spring.datasource.username=root
 spring.datasource.password=YOUR_PASSWORD
 #spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.hibernate.ddl-auto=update
 
 #Swagger
 springdoc.swagger-ui.path=documentation
+
+#liquibase
+spring.liquibase.change-log=classpath:/db/changelog-master.xml
