--- a/backend/Appkademy/pom.xml
+++ b/backend/Appkademy/pom.xml
@@ -60,6 +60,13 @@
 			<version>8.0.33</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.hibernate.orm</groupId>
+			<artifactId>hibernate-jpamodelgen</artifactId>
+			<version>6.2.7.Final</version>
+			<scope>provided</scope>
+		</dependency>
+
 		<!-- other  -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
