--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "formik": "^2.4.3",
     "framer-motion": "^10.15.0",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.8.2",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
