--- a/backend/Appkademy/src/main/resources/application.properties
+++ b/backend/Appkademy/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/appkademy?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=YOUR_PASSWORD
+spring.datasource.url=jdbc:mysql://db.ctd.academy:3306/0723TDPRON1C01LAED0222PT_GRUPO2?useSSL=false&serverTimezone=UTC
+spring.datasource.username=0723TDPRON1C01LAED0222PT_GRUPO2
+spring.datasource.password=Jahfoh7u
 #spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.hibernate.ddl-auto=none
 #spring.jpa.hibernate.ddl-auto=update
