--- a/backend/Appkademy/pom.xml
+++ b/backend/Appkademy/pom.xml
@@ -174,6 +174,11 @@
 							<artifactId>mapstruct-processor</artifactId>
 							<version>1.5.3.Final</version>
 						</path>
+						<path>
+							<groupId>org.hibernate</groupId>
+							<artifactId>hibernate-jpamodelgen</artifactId>
+							<version>6.2.7.Final</version>
+						</path>
 					</annotationProcessorPaths>
 				</configuration>
 			</plugin>
