--- a/backend/Appkademy/pom.xml
+++ b/backend/Appkademy/pom.xml
@@ -132,6 +132,13 @@
 			<artifactId>jakarta.mail-api</artifactId>
 			<version>2.1.0</version>
 		</dependency>
+
+			<!-- Other dependencies -->
+			<dependency>
+				<groupId>com.amazonaws</groupId>
+				<artifactId>aws-java-sdk-s3</artifactId>
+				<version>1.12.170</version> <!-- Use the latest version -->
+			</dependency>
 	</dependencies>
 
 	<build>
