updated security config to remove deprecated methods

--- a/backend/Appkademy/src/main/resources/application.properties
+++ b/backend/Appkademy/src/main/resources/application.properties
@@ -26,3 +26,7 @@ AWS_ACCESS_KEY_ID=AKIAY3PLHSUJB3S24GIE
 AWS_DEFAULT_REGION=us-east-1
 AWS_SECRET_ACCESS_KEY=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
 AWS_BUCKET_NAME=g2c1-img
+
+#security logging level
+logging.level.org.springframework.security=TRACE
+
