--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.2",
     "react-scroll": "^1.8.9",
+    "react-share": "^4.4.1",
     "yup": "^1.2.0"
   },
   "devDependencies": {
